feat: massive changes - improve cache, job tracker & processors

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,13 @@
 DATABASE_URL="postgresql://postgres:password@localhost:54321/postgres?schema=public"
 NODE_ENV="development"
 PORT=3000
-APP_MODE="manager"
+APP_MODE="api,manager,processor"
 
 AWS_ENDPOINT="http://localhost:4566"
 AWS_REGION="us-east-1"
 
 REDIS_URL="redis://localhost:6379/0"
 
+QUEUE_REGISTRIES=registries-queue
 QUEUE_DEPENDENCIES="dependencies-queue"
 QUEUE_JOBS="jobs-queue"
