--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "misi",
-  "version": "0.0.1",
+  "version": "0.0.122",
   "description": "",
   "author": "",
   "private": true,
@@ -14,29 +14,40 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "migrate:generate": "prisma migrate dev --name init",
+    "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.731.1",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "6.2.1",
     "@smithy/node-http-handler": "^4.0.2",
+    "axios": "^1.7.9",
+    "cacheable": "^1.8.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
+    "ioredis": "^5.4.2",
     "lodash": "^4.17.21",
     "nest-winston": "^1.10.1",
+    "prisma": "^6.2.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sqs-consumer": "^11.4.0",
     "tslib": "^2.8.1",
     "type-fest": "^4.32.0",
     "uuid": "^11.0.5",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -46,19 +57,18 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint": "^9.30.1",
+    "globals": "^16.3.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^6.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^8.35.1"
   },
   "jest": {
     "moduleFileExtensions": [
